# quanta-agent

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.old  README.md  config.yml  configure.ac  monikor.spec  movestuff.sh  quanta-agent.spec  toto.yml
.github/workflows/: main.yml
debian/: changelog  control  copyright  libmonikor-dev.install  libmonikor.install  quanta-agent-apache.install  quanta-agent-base.config  quanta-agent-base.dirs  quanta-agent-base.install  quanta-agent-base.postinst  quanta-agent-base.postrm  quanta-agent-base.templates  quanta-agent-cpu.install  quanta-agent-disk.install  quanta-agent-memcached.install  quanta-agent-memory.install  quanta-agent-mysql.install  quanta-agent-network.install  quanta-agent-nfs.install  quanta-agent-nginx.install  quanta-agent-postgresql.install  quanta-agent-process.install  quanta-agent-redis.install  quanta-agent-system.install  quanta-agent-varnish.install  quanta-agent-varnish.postinst  quanta-agent.init  quanta-agent.postinst.debhelper  quanta-agent.postrm.debhelper  quanta-agent.prerm.debhelper
etc/: config.dev.yml  config.yml
etc/modules/: apache.yml  dummy.yml  memcached.yml  mysqlstat.yml  network.yml  nginx.yml  postgresql.yml  process.yml  redis.yml
include/: config.h  io_handler.h  logger.h  metric.h  module.h  monikor.h  server.h  strl.h  utils.h
lib/modules/: Makefile.am  create_module.sh
lib/modules/apache/: Makefile  Makefile.am  Makefile.old  apache.c  apache.h  poll.c
lib/modules/cpu/: Makefile  Makefile.am  Makefile.old  cpu.c  cpu.h  poll.c
lib/modules/disk/: Makefile  Makefile.am  disk.c  disk.h  poll.c
lib/modules/dummy/: Makefile  Makefile.old  dummy.c
lib/modules/memcached/: Makefile.am  Makefile.old  memcached.c  memcached.h  poll.c
lib/modules/memory/: Makefile  Makefile.am  memory.c  memory.h  poll.c
lib/modules/mysqlstat/: Makefile  Makefile.am  mysqlstat.c  mysqlstat.h  poll.c
lib/modules/network/: Makefile  Makefile.am  Makefile.old  dev_list.c  network.c  network.h  poll.c  tcp.c
lib/modules/nfs/: Makefile.am  nfs.c  nfs.h  poll.c
lib/modules/nginx/: Makefile.am  Makefile.old  nginx.c  nginx.h  poll.c
lib/modules/postfix/: Makefile.am  poll.c  postfix.c  postfix.h
lib/modules/postgresql/: Makefile.am  main.c  pollgresql.c  postgresql.c  postgresql.h
lib/modules/process/: Makefile  Makefile.am  aggregate_metrics.c  fetch_processes.c  poll.c  process.c  process.h  process_list.c
lib/modules/process.turfu/: Makefile  poll.c  process.c
lib/modules/redis/: Makefile.am  Makefile.old  poll.c  redis.c  redis.h
lib/modules/system/: Makefile.am  poll.c  system.c  system.h
lib/modules/template/: Makefile  Makefile.am  module.c  module.h
lib/modules/varnish/: Makefile  Makefile.am  poll.c  varnish.c  varnish.h
lib/modules/varnish3/: Makefile.am  poll.c  varnish3.c  varnish3.h
lib/modules/varnish4/: Makefile.am  poll.c  varnish4.c  varnish4.h
lib/modules/varnish6/: poll.c  varnish.c  varnish.h
lib/monikor/: Makefile  Makefile.old
lib/monikor/include/: metric.h
lib/monikor/src/: Makefile.am
lib/monikor/src/metrics/: metric.c  metric_compute.c  metric_list.c  metric_list_serialize.c  metric_list_unserialize.c  metric_store.c
lib/monikor/src/utils/: serialize.c
misc/: monikor.centos.init
packager/: jessie.dockerfile  shell.sh  stretch.dockerfile  wheezy.dockerfile  xenial.dockerfile
src/: Makefile.am  debug.c  load_module.c  logger.c  main.c  metric_list.c
src/config/: config.c  config_dict.c  config_parse_key.c  config_parse_list.c  config_parse_mapping.c  config_parser.c  setup_config.c
src/core/: cleanup.c  control.c  daemonize.c  evict.c  exit.c  init.c  metrics.c  poll.c  reload.c  run.c  send.c  sig.c  update.c  usage.c
src/io_handler/: io_handler.c  list.c  monikor.c  poll.c
src/metrics/: metric.c  metric_compute.c  metric_list.c  metric_list_from_serialized.c  metric_list_serialize.c  metric_store.c
src/modules/: info_module.c  load_all_modules.c  load_module.c  module.c
src/server/: cleanup.c  disconnect.c  handle.c  init.c
src/utils/: command.c  http.c  logger.c  net.c  read_file.c  serialize.c  strl.c  time.c
test/: client.c  dumper.c  fork.c  server.py
tests/: Makefile.am
tests/libmonikor/: check.c  metric.c  metric_list.c  metric_store.c
